[misc][s]: various minor fixes to model, setup.py etc to get things functional (last commit was done w/o testing).

--- a/test.ini
+++ b/test.ini
@@ -19,3 +19,6 @@ port = 5000
 use = config:development.ini
 
 # Add additional test specific configuration options as necessary.
+
+# SQLAlchemy database URL
+sqlalchemy.url = sqlite:///%(here)s/sqlite_test.db
