--- a/couchapp.json
+++ b/couchapp.json
@@ -1,4 +1,5 @@
 {
-    "name": "Name of your CouchApp",
-    "description": "CouchApp"
+    "name": "CommentOnIt",
+    "description": "Inline Commenting on Stuff",
+    "index" : "_show/edit"
 }
