[show/edit,show/view,lists/index,tests][l]: implement basic view and index action for document and improve edit (esp look and feel).

--- a/couchapp.json
+++ b/couchapp.json
@@ -1,5 +1,5 @@
 {
-    "name": "CommentOnIt",
+    "name": "Comment On It",
     "description": "Inline Commenting on Stuff",
-    "index" : "_show/edit"
+    "index" : "_list/index/recent-items"
 }
