[_attachments,app][m+]: first steps at using sammy.js to build the app (only index route works so far!).

--- a/couchapp.json
+++ b/couchapp.json
@@ -1,5 +1,5 @@
 {
     "name": "Comment On It",
     "description": "Inline Commenting on Stuff",
-    "index" : "_list/index/recent-items"
+    "index" : "index.html"
 }
